src/tree-sitter-dotvvm/test/corpus/dothtml.txt
==================
attached property
==================

<a RenderSettings.Mode=Server />
---

(source_file
      (markup
        (html_element
          (self_closing_tag
            (tag_name)
            (attribute
              (attribute_name_attached_property)
              (attribute_value))))))

==================
component with attached property
==================

<dot:TextBox RenderSettings.Mode=Server />
---
(source_file
      (markup
        (html_element
          (self_closing_tag
            (tag_name)
            (attribute
              (attribute_name_attached_property)
              (attribute_value))))))
==================
component with postback handlers
==================

<dot:TextBox>
  <PostBack.Handlers>
    <dot:ConfirmPostbackHAndler />
  </PostBack.Handlers>
</dot:TextBox>
---

(source_file
  (markup
    (html_element
      (start_tag (tag_name))
      (html_element
          (start_tag (tag_name))
          (html_element (self_closing_tag (tag_name)))
          (end_tag (tag_name)))
      (end_tag (tag_name)))))
