src/tree-sitter-dotvvm/test/corpus/html-main.txt
===================================
Tags
===================================
<span>Hello</span>
---

(source_file (markup
  (html_element
    (start_tag (tag_name))
    (html_text)
    (end_tag (tag_name)))))

===================================
Tags with attributes
===================================
<input value=yes class="a" data-💩></input>
---

(source_file (markup
  (html_element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value))
      (attribute
        (attribute_name)
        (attribute_value))
      (attribute
        (attribute_name)))
    (end_tag (tag_name)))))

===================================
Nested tags
===================================
<div>
  <span>a</span>
  b
  <b>c</b>
  Multi-line
  text
</div>
---

(source_file (markup
  (html_element
    (start_tag (tag_name))
    (html_element
      (start_tag (tag_name))
      (html_text)
      (end_tag (tag_name)))
    (html_text)
    (html_element
      (start_tag (tag_name))
      (html_text)
      (end_tag (tag_name)))
    (html_text)
    (end_tag (tag_name)))))

==================================
Void tags
==================================
<form><img src="something.png"><br><input type=submit value=Ok /></form>
---

(source_file (markup
  (html_element
    (start_tag (tag_name))
    (html_element
      (start_tag
        (tag_name)
        (attribute (attribute_name) (attribute_value))))
    (html_element (start_tag (tag_name)))
    (html_element
      (self_closing_tag
        (tag_name)
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))))
    (end_tag (tag_name)))))

==================================
Void tags at EOF
==================================
<img src="something.png">
---

(source_file (markup
  (html_element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (attribute_value))))))

==================================
Custom tags
==================================
<something:different>
  <atom-text-editor mini>
    Hello
  </atom-text-editor>
</something:different>
---

(source_file (markup
  (html_element
    (start_tag (tag_name))
    (html_element
      (start_tag (tag_name) (attribute (attribute_name)))
      (html_text)
      (end_tag (tag_name)))
    (end_tag (tag_name)))))

==================================
Comments
==================================
<!-- hello -->
<!-- world ->-> -- > ->->->-- -> still comment -->
<div>
  <!-- <span>something</span> -->
</div>
---

(source_file (markup
  (html_comment)
  (html_comment)
  (html_element
    (start_tag (tag_name))
    (html_comment)
    (end_tag (tag_name)))))

==================================
Raw text elements
==================================
<script>
  </s
  </sc
  </scr
  </scri
  </scrip
</script>

<style>
  </ </s </st </sty </styl
</style>

<script>
</SCRIPT>

---

(source_file (markup
  (script_element
    (start_tag (tag_name))
    (raw_text)
    (end_tag (tag_name)))
  (style_element
    (start_tag (tag_name))
    (raw_text)
    (end_tag (tag_name)))
  (script_element
    (start_tag (tag_name))
    (raw_text)
    (end_tag (tag_name)))))

==================================
All-caps doctype
==================================
<!DOCTYPE html PUBLIC
  "-//W3C//DTD XHTML 1.0 Transitional//EN"
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
---

(source_file (markup
  (doctype)))

==================================
Lowercase doctype
==================================
<!doctype html>
---

(source_file (markup
  (doctype)))

==================================
LI elements without close tags
==================================
<ul>
  <li>One
  <li>Two
</ul>
---

(source_file (markup
  (html_element
    (start_tag (tag_name))
    (html_element (start_tag (tag_name)) (html_text))
    (html_element (start_tag (tag_name)) (html_text))
    (end_tag (tag_name)))))

======================================
DT and DL elements without close tags
======================================
<dl>
  <dt>Coffee
  <dt>Café
  <dd>Black hot drink
  <dt>Milk
  <dd>White cold drink
</dl>
---

(source_file (markup
  (html_element
    (start_tag (tag_name))
    (html_element (start_tag (tag_name)) (html_text))
    (html_element (start_tag (tag_name)) (html_text))
    (html_element (start_tag (tag_name)) (html_text))
    (html_element (start_tag (tag_name)) (html_text))
    (html_element (start_tag (tag_name)) (html_text))
    (end_tag (tag_name)))))

======================================
P elements without close tags
======================================
<p>One
<div>Two</div>
<p>Three
<p>Four
<h1>Five</h1>
---

(source_file (markup
  (html_element (start_tag (tag_name)) (html_text))
  (html_element (start_tag (tag_name)) (html_text) (end_tag (tag_name)))
  (html_element (start_tag (tag_name)) (html_text))
  (html_element (start_tag (tag_name)) (html_text))
  (html_element (start_tag (tag_name)) (html_text) (end_tag (tag_name)))))

======================================
Ruby annotation elements without close tags
======================================
<ruby>東<rb>京<rt>とう<rt>きょう</ruby>
---

(source_file (markup
  (html_element
    (start_tag (tag_name))
    (html_text)
    (html_element (start_tag (tag_name)) (html_text))
    (html_element (start_tag (tag_name)) (html_text))
    (html_element (start_tag (tag_name)) (html_text))
    (end_tag (tag_name)))))

=======================================
COLGROUP elements without end tags
=======================================
<table>
  <colgroup>
    <col style="background-color: #0f0">
    <col span="2">
  <tr>
    <th>Lime</th>
    <th>Lemon</th>
    <th>Orange</th>
  </tr>
</table>
---

(source_file (markup
  (html_element
    (start_tag (tag_name))
    (html_element
      (start_tag (tag_name))
      (html_element (start_tag
        (tag_name)
        (attribute (attribute_name) (attribute_value))))
      (html_element (start_tag
        (tag_name)
        (attribute (attribute_name) (attribute_value)))))
    (html_element
      (start_tag (tag_name))
      (html_element (start_tag (tag_name)) (html_text) (end_tag (tag_name)))
      (html_element (start_tag (tag_name)) (html_text) (end_tag (tag_name)))
      (html_element (start_tag (tag_name)) (html_text) (end_tag (tag_name)))
      (end_tag (tag_name)))
    (end_tag (tag_name)))))

=========================================
TR, TD, and TH elements without end tags
=========================================
<table>
  <tr>
    <th>One
    <th>Two
  <tr>
    <td>Three
    <td>Four
</table>
---

(source_file (markup
  (html_element
    (start_tag (tag_name))
    (html_element
      (start_tag (tag_name))
      (html_element (start_tag (tag_name)) (html_text))
      (html_element (start_tag (tag_name)) (html_text)))
    (html_element
      (start_tag (tag_name))
      (html_element (start_tag (tag_name)) (html_text))
      (html_element (start_tag (tag_name)) (html_text)))
    (end_tag (tag_name)))))
