src/tree-sitter-dotvvm/test/corpus/html.txt
==================
One self-closing element
==================

<a href="text" />
---

(source_file
      (markup
        (html_element
          (self_closing_tag
            (tag_name)
            (attribute
              (attribute_name_html)
              (attribute_value))))))


==================
One self-closing element
==================

<a href=text> TTTT </a>
---

(source_file
    (markup
        (html_element
          (start_tag
            (tag_name)
            (attribute
              (attribute_name_html)
              (attribute_value)))
          (html_text)
          (end_tag
            (tag_name)))))

==================
HTML comments
==================

<!-- <a href=text> TTTT </a>-->

<p> Ahoj </p>

<!-- <%-- blabla-- -> --%> <!---->

---

(source_file
      (markup
        (html_comment)
        (html_element
          (start_tag
            (tag_name))
          (html_text)
          (end_tag
            (tag_name)))
        (html_comment)))

==================
DotVVM comments
==================

<%-- <a href=text> TTTT </a>--%>

<p> Ahoj </p>

<%-- <!-- blabla-- -> --> <!----%>

---
(source_file
      (markup
        (dotvvm_comment)
        (html_element
          (start_tag
            (tag_name))
          (html_text)
          (end_tag
            (tag_name)))
        (dotvvm_comment)))


==================
simple script tag
==================

<script type="application/javascript">
  let x = ""
</script>

<a href="A" />

---

(source_file
    (markup
        (script_element
          (start_tag
            (tag_name)
            (attribute
              (attribute_name_html)
              (attribute_value)))
          (raw_text)
          (end_tag
            (tag_name)))
      (html_element
          (self_closing_tag
            (tag_name)
            (attribute
              (attribute_name_html)
              (attribute_value))))))

==================
less than somewhere
==================

<div>  a < b </div>

---

(source_file
    (markup
        (html_element
          (start_tag
            (tag_name))
          (html_text)
          (end_tag
            (tag_name)))))

==================
curly braces somewhere
==================

<div>  a { b } </div>

---

(source_file
    (markup
        (html_element
          (start_tag
            (tag_name))
          (html_text)
          (end_tag
            (tag_name)))))



==================
js event
==================

<a onclick="alert(1)"> </a>

---

(source_file
      (markup
        (html_element
          (start_tag
            (tag_name)
            (attribute
              (attribute_name_js_event)
              (attribute_value)))
          (end_tag
            (tag_name)))))

===================
single letter attribute name
===================

<a x=""></a>

---

(source_file
      (markup
        (html_element
          (start_tag
            (tag_name)
            (attribute
              (attribute_name_html)))
          (end_tag
            (tag_name)))))

===================
tag - in progress
===================

<a

---

(source_file
  (markup
    (html_element
      (self_closing_tag
        (tag_name)
        (MISSING "/>")))))
===================
attribute - in progress
===================

<a href=

---

(source_file
  (ERROR
    (tag_name)
    (attribute_name_html)))

